# class_loader

./: .gitignore  CMakeLists.txt  Dockerfile  package.xml
include/class_loader/: class_loader.hpp  class_loader_core.hpp  multi_library_class_loader.hpp
src/: class_loader.cpp  class_loader_core.cpp
test/: CMakeLists.txt  utest.cpp
